update formatting in css; update error message; remove titlecase function (as name of comp will be all caps using css); use .visibility css styling in javascript for error message to ensure there is a space for error message (without pushing the start button down)

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 
 header {
   padding: 35px;
+  margin: 0 auto;
 }
 
 body {
@@ -23,8 +24,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #907f9f;
-  width: 1500px;
+  background-color: #92809a;
+  width: 1700px;
   margin: 0 auto;
 }
 
@@ -41,7 +42,9 @@ body {
   justify-content: center;
   align-items: center;
   font-family: "Bebas Neue", sans-serif;
-  font-size: 150px;
+  font-size: 170px;
+  padding-bottom: 25px;
+  color: #131116;
 }
 
 .time-units-container {
@@ -56,26 +59,48 @@ body {
 }
 
 .time-unit-label {
-  font-size: 20px;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
+}
+
+#next-competition {
   font-family: "Montserrat", sans-serif;
 }
 
 #next-competition h3 {
-  font-family: "Montserrat", sans-serif;
-  font-size: 20px;
+  font-size: 26px;
   color: #f1e9da;
   padding-top: 35px;
   padding-bottom: 15px;
+  margin: 0 auto;
 }
 
-input {
-  margin: 15px 10px;
-  padding: 10px;
+.user-input-field {
+  height: 50px;
+  margin: 35px 20px;
+  padding: 15px;
+  width: 300px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 20px;
+}
+
+#error-message {
+  visibility: hidden;
+  color: #f0a202;
+  font-size: 19px;
+  padding-top: 5px;
+  padding-bottom: 25px;
 }
 
 #start-countdown-button {
-  padding: 20px 45px;
-  font-family: "Sifonn", sans-serif;
+  height: 60px;
+  width: 200px;
+  font-size: 25px;
   background-color: #f1e9da;
   color: #2e294e;
+  margin-top: 0px;
+}
+
+footer {
+  margin-top: 55px;
 }
